get api by file u_id
